--- a/AutoTool/AutoTool.csproj
+++ b/AutoTool/AutoTool.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Login\LoginHandler.cs" />
     <Compile Include="Model\DataBackup.cs" />
     <Compile Include="Model\InformatonFacebook.cs" />
+    <Compile Include="Views\InputDataLogin.xaml.cs">
+      <DependentUpon>InputDataLogin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Xuly\Handlers.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -73,6 +76,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\InputDataLogin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
