--- a/AutoTool/packages.config
+++ b/AutoTool/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="Selenium.Chrome.WebDriver" version="2.45" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.46.0" targetFramework="net452" />
   <package id="System.Json" version="4.5.0" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
   <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="net452" />
